--- a/src/LandingPage/LandingPage.module.css
+++ b/src/LandingPage/LandingPage.module.css
@@ -1,7 +1,16 @@
 .logo{
     width:180px;
     height:80px;
-    margin: 50px 0 ;
+    margin: 50px 0;
+}
+
+.landing{
     display: flex;
     justify-content: center;
 }
+.search-area{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
